-------------------------- soilDB 1.2 (2013-08-13) ----------------------------
* fetchRaCA() function now stable, ready for general usage
* fixed bug in fetchRaCA() function where the presence of single-quote character in horizon designation would throw and error

-------------------------- soilDB 1.1-3 (2013-07-30) ----------------------------
* new function get_copedon_from_NASIS_db(): returns basic information associated with pedons linked to component data in NASIS
* new function fetchRaCA(): gets data from the Rapid Carbon Assessment project [work in progress]

-------------------------- soilDB 1.1 (2013-06-27) ----------------------------
* get_site_data_from_NASIS_db() no longer has problems when more than 1 site bedrock kind is defined; only the shallowest row is returned

-------------------------- soilDB 1.0 (2013-04-04) ----------------------------
* fetchNASIS() is now much more efficient: faster / less memory used
* new function! fetchKSSL(): experimental interface to (most of) the KSSL data
	- queries can be performed by series name or GCS bounding box
	- data are delivered via CA Soil Resource Lab server

-------------------------- soilDB 0.9-8 (2013-04-03) ----------------------------
* fetchOSD() now immune to queries for non-soils
* improved efficiency in fetch* functions
* NASIS-DMU fetching functions now return more information, still not as complete as pedon-queries

-------------------------- soilDB 0.9-7 (2013-03-01) ----------------------------
* NASIS query functions now return only records from the selected set, please test older code!

-------------------------- soilDB 0.9-6 (2013-02-26) ----------------------------
* new function get_text_notes_from_NASIS_db() -- still needs proper documentation
* bug fixes to PedonPC and NASIS queries, new data elements returned by extended query functions
* SoilWeb queries via URL are now URL-encoded to allow for spaces in soil series names
