@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.2
-Date: 2013-08-13
-Packaged: 2013-08-13; dylan
+Version: 1.2-1
+Date: 2013-09-12
+Packaged: 2013-09-12; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
